--- a/.sailsrc
+++ b/.sailsrc
@@ -3,7 +3,7 @@
     "modules": {}
   },
   "_generatedWith": {
-    "sails": "1.0.0-46",
-    "sails-generate": "1.15.5"
+    "sails": "1.0.0",
+    "sails-generate": "1.15.16"
   }
 }
