--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "@sendgrid/mail": "^6.2.1",
     "async": "2.0.1",
     "connect-redis": "3.2.0",
-    "jsonwebtoken": "^8.1.1",
+    "jsonwebtoken": "^8.2.0",
     "lodash": "3.10.1",
-    "sails": "^1.0.0-46",
+    "sails": "^1.0.0",
     "sails-hook-apianalytics": "^2.0.0",
     "sails-hook-organics": "^0.13.0",
-    "sails-hook-orm": "^2.0.0-16",
-    "sails-hook-sockets": "^1.4.0",
-    "sails-mongo": "^1.0.0-11",
+    "sails-hook-orm": "^2.0.0",
+    "sails-hook-sockets": "^1.5.2",
+    "sails-mongo": "^1.0.0",
     "socket.io-redis": "5.2.0"
   },
   "devDependencies": {
     "eslint": "4.11.0",
     "grunt": "1.0.1",
-    "sails-hook-grunt": "^3.0.2"
+    "sails-hook-grunt": "^3.1.0"
   },
   "scripts": {
     "start": "nodemon --ignore node_modules app.js"
